Added broken image animation to section hobby

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@400;700&family=Saira:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<script src="https://kit.fontawesome.com/9f78667786.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="../css/style.css" />
 	</head>
 
@@ -106,15 +107,32 @@
 		<section class="hobby clearfix">
 			<h1>W wolnym czasie uwielbiam</h1>
 			<div class="item">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
 				<p>Czytać fantastykę</p>
 			</div>
 			<div class="item">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
 				<p>Żeglować</p>
 			</div>
 			<div class="item">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
 				<p>Majsterkować</p>
 			</div>
+			<span></span>
 			<div class="item">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
 				<p>Grać na komputerze</p>
 			</div>
 		</section>
