change section  my characteristics to my learning

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<script src="https://kit.fontawesome.com/9f78667786.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="../css/style.css" />
 	</head>
-
 	<body>
 		<header>
 			<div class="welcome">
@@ -24,34 +23,71 @@
 			</div>
 			<img src="images/photo_moje.png" alt="Zdjęcie Damian Goszkowski" />
 		</header>
-		<section class="features clearfix">
-			<h1>Tworzę dobre strony internetowe</h1>
-			<div class="feature">
-				<img src="../images/services_1_bez_js.png" alt="loga html,js i css" />
-				<h2>Nowoczesne i zgodne z aktualnymi standardami</h2>
-				<p class="description">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur architecto officia odio reiciendis eius quod
-					dolore, fugiat perspiciatis nemo cum quidem ipsam aliquid temporibus tempora id dolorem velit distinctio
-					quasi.
-				</p>
+		<section class="languages">
+			<h1>Moja nauka</h1>
+			<div class="language">
+				<div class="percent" style="--clr: #fc5b04; --num: 95">
+					<div class="dot"></div>
+					<svg>
+						<circle cx="70" cy="70" r="70"></circle>
+						<circle cx="70" cy="70" r="70"></circle>
+					</svg>
+					<div class="number">
+						<h2>
+							95
+							<span>%</span>
+						</h2>
+						<p>Html</p>
+					</div>
+				</div>
 			</div>
-			<div class="feature">
-				<img src="../images/services2.png" alt="logo wyszukiwarki google" />
-				<h2>Zoptymalizowane pod kątem wyszukiwarek internetowych</h2>
-				<p class="description">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur architecto officia odio reiciendis eius quod
-					dolore, fugiat perspiciatis nemo cum quidem ipsam aliquid temporibus tempora id dolorem velit distinctio
-					quasi.
-				</p>
+			<div class="language">
+				<div class="percent" style="--clr: #00d4fe; --num: 95">
+					<div class="dot"></div>
+					<svg>
+						<circle cx="70" cy="70" r="70"></circle>
+						<circle cx="70" cy="70" r="70"></circle>
+					</svg>
+					<div class="number">
+						<h2>
+							95
+							<span>%</span>
+						</h2>
+						<p>Css</p>
+					</div>
+				</div>
 			</div>
-			<div class="feature">
-				<img src="../images/services3.png" alt="laptop,tablet i smartfon" />
-				<h2>Świetnie wyglądające na urządzeniach mobilnych</h2>
-				<p class="description">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur architecto officia odio reiciendis eius quod
-					dolore, fugiat perspiciatis nemo cum quidem ipsam aliquid temporibus tempora id dolorem velit distinctio
-					quasi.
-				</p>
+			<div class="language">
+				<div class="percent" style="--clr: #ffff00; --num: 70">
+					<div class="dot"></div>
+					<svg>
+						<circle cx="70" cy="70" r="70"></circle>
+						<circle cx="70" cy="70" r="70"></circle>
+					</svg>
+					<div class="number">
+						<h2>
+							70
+							<span>%</span>
+						</h2>
+						<p>Javascript</p>
+					</div>
+				</div>
+			</div>
+			<div class="language">
+				<div class="percent" style="--clr: #06ffff; --num: 5">
+					<div class="dot"></div>
+					<svg>
+						<circle cx="70" cy="70" r="70"></circle>
+						<circle cx="70" cy="70" r="70"></circle>
+					</svg>
+					<div class="number">
+						<h2>
+							5
+							<span>%</span>
+						</h2>
+						<p>React</p>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section class="portfolio">
@@ -73,46 +109,6 @@
 				<span id="three"></span>
 				<span id="four"></span>
 			</div>
-			<!-- <div class="project clearfix">
-				<div class="web"><img src="images/portfolio1.jpg" alt="przykład portfolio interia" /></div>
-				<div class="about">
-					<h2>Nazwa projektu</h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aperiam rerum error fuga iusto ullam,
-						similique delectus adipisci, quos ratione itaque sapiente, ipsam eius quas. Rerum enim ipsam a officiis.
-					</p>
-				</div>
-			</div>
-			<div class="project clearfix">
-				<div class="web"><img src="images/portfolio2.jpg" alt="przykład portfolio na:Temat" /></div>
-				<div class="about">
-					<h2>Nazwa projektu</h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aperiam rerum error fuga iusto ullam,
-						similique delectus adipisci, quos ratione itaque sapiente, ipsam eius quas. Rerum enim ipsam a officiis.
-					</p>
-				</div>
-			</div> -->
-			<!-- <div class="project clearfix">
-				<div class="web"><img src="images/portfolio3.jpg" alt="przykład portfolio allegro" /></div>
-				<div class="about">
-					<h2>Nazwa projektu</h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aperiam rerum error fuga iusto ullam,
-						similique delectus adipisci, quos ratione itaque sapiente, ipsam eius quas. Rerum enim ipsam a officiis.
-					</p>
-				</div>
-			</div> -->
-			<!-- <div class="project clearfix">
-				<div class="web"><img src="images/portfolio4.jpg" alt="przykład portfolio onet" /></div>
-				<div class="about">
-					<h2>Nazwa projektu</h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aperiam rerum error fuga iusto ullam,
-						similique delectus adipisci, quos ratione itaque sapiente, ipsam eius quas. Rerum enim ipsam a officiis.
-					</p>
-				</div>
-			</div> -->
 		</section>
 		<section class="slogan">
 			<div class="bg">
@@ -184,6 +180,5 @@
 		</section>
 		<footer>&copy; Damian Goszkowski</footer>
 		<script src="main.js"></script>
-		======= >>>>>>> 3f5b360e5daeb08174cbde5b0e2a5e0a6d3798c2
 	</body>
 </html>
