Button in first section changes, deleted few unnecessary pictures

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 				<p>witaj!</p>
 				<h1>jestem Damian Goszkowski,</h1>
 				<h2>początkujący web developer</h2>
-				<button>zobacz moje portfolio</button>
+				<button>
+					zobacz moje portfolio
+					<span></span>
+					<i></i>
+				</button>
 			</div>
 			<img src="images/photo_moje.png" alt="Zdjęcie Damian Goszkowski" />
 		</header>
